--- a/aktuelles.html
+++ b/aktuelles.html
@@ -45,6 +45,8 @@
 			<div class="inhalt">
 					
 					<p>Verlinkung zu WordPress Blog von Martina</p> 
+					<p>Note: Workpressaccount für Martina erstellen</p>
+					<p>Texteintr&auml;ge durch Martina</p>
 
 			</div>
 
